--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!--app-entrar></app-entrar>-->
 <!--<app-cadastrar></app-cadastrar>-->
-<router-outlet></router-outlet>
+<!--<router-outlet></router-outlet>-->
+<app-feed></app-feed>
 
